SERVER-66436 Fix initialisation errors in DConcurrencyTest benchmarks