src/mongo/db/concurrency/d_concurrency_bm.cpp
@@ -97,6 +97,10 @@ protected:
 };
 
 BENCHMARK_DEFINE_F(DConcurrencyTest, BM_StdMutex)(benchmark::State& state) {
+    if (state.thread_index == 0) {
+        makeKClientsWithLockers(state.threads);
+    }
+
     static auto mtx = MONGO_MAKE_LATCH();
 
     for (auto keepRunning : state) {
@@ -105,6 +109,10 @@ BENCHMARK_DEFINE_F(DConcurrencyTest, BM_StdMutex)(benchmark::State& state) {
 }
 
 BENCHMARK_DEFINE_F(DConcurrencyTest, BM_ResourceMutexShared)(benchmark::State& state) {
+    if (state.thread_index == 0) {
+        makeKClientsWithLockers(state.threads);
+    }
+
     static Lock::ResourceMutex mtx("testMutex");
 
     for (auto keepRunning : state) {
@@ -113,6 +121,10 @@ BENCHMARK_DEFINE_F(DConcurrencyTest, BM_ResourceMutexShared)(benchmark::State& s
 }
 
 BENCHMARK_DEFINE_F(DConcurrencyTest, BM_ResourceMutexExclusive)(benchmark::State& state) {
+    if (state.thread_index == 0) {
+        makeKClientsWithLockers(state.threads);
+    }
+
     static Lock::ResourceMutex mtx("testMutex");
 
     for (auto keepRunning : state) {
